--- a/wiki/UserGuide.wiki
+++ b/wiki/UserGuide.wiki
@@ -10,7 +10,7 @@ To install !MagickTiler, simply unzip the distribution bundle to your hard disk.
 !MagickTiler can be used from the command line prompt using the command
 'java -jar magicktiler.jar', plus appropriate options. 
 
-*Example:* {{{java -jar magicktiler.jar -s tms -f jpeg -p images}}}
+*Example:* {{{java -jar magicktiler.jar -s tms -f jpeg -p -i images}}}
 
 The example command will create TMS tilesets (with JPEG tiles) for each file
 in the folder 'images'. A preview HTML file will be added to each tileset. 
