--- a/wiki/ToDos.wiki
+++ b/wiki/ToDos.wiki
@@ -5,10 +5,11 @@
   * Update Documentation since we now have a GUI!
   * Put the (non-standalone) .jar up for download
   * Create developer documentation (+ images to explain various tiling schemes)
+  * Finish the KMLSuperOverlayTiler
+  * Finish the Google Map tiling scheme
 
 ==Not-so-high Priority==
   * Add support for Mr.SID image format by integrating with the [http://www.lizardtech.com/downloads/tools.php LizardTech command line converter]
-  * Add support for Google Map tile scheme
   * Check for !ImageMagick-compatibility
   * GUI-Improvements:
     * drag-and-drop
