--- a/wiki/UserGuide.wiki
+++ b/wiki/UserGuide.wiki
@@ -19,7 +19,7 @@ in the folder 'images'. A preview HTML file will be added to each tileset.
   {{{-h}}} .... displays help text<br>
   {{{-i}}} ....   input file or directory<br>
   {{{-o}}} ....   output directory (for tilesets) or file (for PTIF)<br>
-  {{{-s}}} ....   selects the tiling scheme ('tms', 'zoomify' or 'ptif')<br>
+  {{{-s}}} ....   selects the tiling scheme ('tms', 'zoomify','gmap' or 'ptif')<br>
   {{{-f}}} ....   selects the tile image format ('jpeg' or 'png')<br>
   {{{-b}}} ....   selects a background color (if applicable for the selected tile scheme)<br>
   {{{-p}}} ....   generates an HTML preview file<br>
