--- a/wiki/UserGuide.wiki
+++ b/wiki/UserGuide.wiki
@@ -30,7 +30,7 @@ in the folder 'images'. A preview HTML file will be added to each tileset.
 
 = Lib Usage =
 
-!MagickTiler can also be used as a Java library. Just add the magicktiler.jar to your build path. Here is a simple code example for generating Google Map Tiles. It works similar for all other tiling schemes.
+!MagickTiler can also be used as a Java library. Just add the magicktiler.jar to your build path and you're good to go. Here is a simple code example for generating Google Map Tiles. It works in the same way for all other tiling schemes (just replace GoogleMapsTiler w/ TMSTiler, ZoomifyTiler, PTIFTiler, etc.).
 
 {{{
 test test
