--- a/wiki/UserGuide.wiki
+++ b/wiki/UserGuide.wiki
@@ -28,7 +28,7 @@ in the folder 'images'. A preview HTML file will be added to each tileset.
   {{{-l}}} ....   writes all relevant reporting information to a log file<br>
   {{{-v}}} ....   validate instead of convert: checks existing tilesets and generates a report about their correctness/integrity
 
-= Lib Usage =
+= Library Usage =
 
 !MagickTiler can also be used as a Java library. Just add the magicktiler.jar to your build path and you're good to go. Here is a simple code example for generating Google Map tiles. It works in the same way for all other tiling schemes (just replace GoogleMapsTiler with TMSTiler, ZoomifyTiler, PTIFTiler, etc.).
 
