Edited wiki page ToDos through web user interface.

--- a/wiki/ToDos.wiki
+++ b/wiki/ToDos.wiki
@@ -4,7 +4,7 @@
 ==High Priority==
   * Update Documentation since we now have a GUI!
   * Put the (non-standalone) .jar up for download
-  * Create developer documentation (+ images to explain various tiling schemes)
+  * Implement the validators for GMAPS and TMS.
   * Add support for [http://msdn.microsoft.com/en-us/library/cc645077%28v=VS.95%29.aspx MS Deep Zoom] ([http://gasi.ch/blog/inside-deep-zoom-2/ more info], [http://gasi.ch/blog/openzoom-description-format/ even more info])
 
 
