Edited wiki page ToDos through web user interface.

--- a/wiki/ToDos.wiki
+++ b/wiki/ToDos.wiki
@@ -3,7 +3,7 @@
 
 ==High Priority==
   * Put the (non-standalone) .jar up for download
-  * Implement the validator for TMS.
+  * Implement the validator for TMS
   * Add support for [http://msdn.microsoft.com/en-us/library/cc645077%28v=VS.95%29.aspx MS Deep Zoom] ([http://gasi.ch/blog/inside-deep-zoom-2/ more info], [http://gasi.ch/blog/openzoom-description-format/ even more info])
 
 
