--- a/wiki/BuildInstructions.wiki
+++ b/wiki/BuildInstructions.wiki
@@ -14,6 +14,7 @@ The !MagickTiler embeddable library file (called {{{magicktiler-lib-<version>.ja
  * {{{im4java-1.1.0.jar}}}
  * {{{log4j-1.2.15.jar}}}
  * {{{commons-cli-1.2.jar}}}
+ * {{{xstream-1.3.1.jar}}}
  * {{{scala-library.jar (optional)}}}
  * {{{scala-swing.jar (optional)}}}
 
